someone forked this as an template of travis for c so i need to change something

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ compiler:
   - gcc
   - clang
 
-script: sh ./runtest.sh
+before_install: 
+  - cd test
+
+script: make test
 
 branches:
   only: master
